# torrent

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.md  vcpkg.json
cmake/: CompilerWarnings.cmake
include/: async_file.hpp  bencode-parser.hpp  bencode_parser.hpp  bitfield.hpp  client.hpp  config.hpp  extensions.hpp  http_tracker.hpp  message.hpp  metadata.hpp  peer.hpp  peer_manager.hpp  pieces.hpp  thread_safe_queue.hpp  tracker.hpp  tracker_manager.hpp  udp_tracker.hpp  utility.hpp
res/: arch.torrent  sopranos.torrent
src/: bencode_parser.cpp  client.cpp  extensions.cpp  main.cpp  metadata.cpp  peer.cpp  peer_manager.cpp  pieces.cpp  tracker.cpp  udp_tracker.cpp  utility.cpp
